# gateo-cli

./: .gitignore  CMakeLists.txt  FullAdder.gateo  README.md  gate_rt.h
include/: Command.hpp  CommandInfo.hpp  NumberFormatter.hpp  Registry.hpp
include/codegen/: Codegen.hpp  CodegenConfig.hpp
include/sim/: Evaluation.hpp  NumberFormatter.hpp  SimConfig.hpp  SimObject.hpp  Simulator.hpp
include/sim/adapter/: Adapter.hpp
include/sim/command/: Simulator.hpp
include/sim/engine/: Engine.hpp
runtime/: gate_rt.c  gate_rt.h
src/: NumberFormatter.cpp  Registry.cpp
src/cli/: GateCli.cpp
src/codegen/: Codegen.cpp  CodegenConfig.cpp  RuntimeEmbed.hpp
src/sim/: Evaluation.cpp  NumberFormatter.cpp  SimConfig.cpp  Simulator.cpp
src/sim/adapter/: Adapter.cpp
src/sim/command/: Simulator.cpp
src/sim/engine/: Engine.cpp
